# HackMatrix

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  Package.swift  README.md  json2text.sh  plan-unified-action-processing.md  ralph_loop.sh
python/: README.md  hack_env.py  pyproject.toml  requirements.txt  setup.py  test_env.py  test_env_parity.py  test_observation.py
python/hackmatrix/: __init__.py  gym_env.py  jax_env.py  observation_utils.py  training_config.py  training_db.py  training_utils.py
python/hackmatrix/jax_env/: __init__.py  actions.py  enemy.py  env.py  observation.py  programs.py  rewards.py  stage.py  state.py
python/hackmatrix/purejaxrl/: __init__.py  checkpointing.py  config.py  env_wrapper.py  logging.py  masked_ppo.py  train.py
python/notebooks/: train_hackmatrix_tpu.ipynb
python/scripts/: benchmark_num_envs.py  inspect_policy.py  manual_play.py  memory_test.py  profile_training.py  random_test.py  show_observation_space.py  test_env_parity.py  train.py  train_jax.py  train_purejaxrl.py  validate_observations.py  validate_observations_comprehensive.py  watch_jax_agent.py  watch_trained_agent.py
python/tests/: conftest.py  env_interface.py  jax_env_wrapper.py  run_all_tests.py  swift_env_wrapper.py  test_action_mask.py  test_edge_cases.py  test_enemies.py  test_interface_smoke.py  test_movement.py  test_programs.py  test_purejaxrl.py  test_rewards.py  test_siphon.py  test_stages.py  test_turns.py
python/tests/implementation/: __init__.py  (+1 more)
specs/: README.md  (+10 more)
(+57 files in other folders)
